Refactor : MongoDB 연결
Chat Database MongoDB로 변경됐습니다.
설정 관련 자료는 https://www.notion.so/murphytklee/Spring-Boot-MongoDB-d854fb56d8e9429bbdddc010c01d1d53?pvs=4 참고 바랍니다